spade-tests/src/snapshots/spade_tests__wordlength_inference__multiplication_and_addition_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<A, B>(a: int<4>, b: int<4>) -> int<0> {
  a * b + a + b
}
entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }


error: Word length mismatch. Got 2 bits but expected 0 bits
  ┌─ testinput:4:48
  │
4 │ entity main(clk: clock, rst: bool) -> int<0> { f(0, 0) }
  │                                                ^^^^^^^ Got 2 bits, expected 0


